# a-raft-storage

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  build.sh  scaffold.yaml
include/a-raft-node/: raft_io.h  raft_server.h
include/a-raft-storage/: raft_wal.h
src/: raft_io.c  raft_server.c  raft_wal.c
tests/: CMakeLists.txt
tests/fuzz/: test_raft_fuzz.c
tests/src/: test_raft_api.c  test_raft_cluster.c  test_raft_io.c  test_raft_pump.c  test_raft_wal.c
